# engine

./: .README.md.un~  .flake8  .gitignore  .pylintrc  LICENSE  MANIFEST.in  README.md  pretty_logs.py  requirements.txt  setup.cfg  setup.py  setup.py~  simple.py  tasks.py
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md
.github/workflows/: lint.yml
demo/: sample.dae  sample2.dae  sample3.dae  simple.py
engine/: __init__.py  audio.py  component.py  entity.py  game.py  resource.py  system.py  transform.py
engine/assets/: __init__.py
engine/inputs/: __init__.py  key.py  systems.py
engine/rendering/: .font.py.un~  __init__.py  camera.py  character.py  color.py  font.py  font.py~  icon.py  mesh.py  model.py  shader.py  sprite.py  systems.py  text.py  texture.py  window.py
engine/rendering/lighting/: __init__.py  lamp.py  light.py
engine/rendering/renderers/: __init__.py  mesh.py  sprite.py  text.py
flaris/: audio.py  component.py  entity.py  game.py  system.py  transform.py
flaris/inputs/: __init__.py  key.py  systems.py
flaris/rendering/: __init__.py  camera.py  font.py  icon.py  light.py  material.py  mesh.py  model.py  scene.py  shader.py  systems.py  text.py  texture.py  window.py
framework/: .resource.py.un~  __init__.py  audio.py  resource.py  resource.py~
framework/inputs/: __init__.py  key.py  systems.py
framework/rendering/: font.py  icon.py  shader.py  sprite.py  systems.py  text.py  texture.py  window.py
test/: .pylintrc
test/smoke/: test_placeholder.py
(+30 files in other folders)
