[metadata]
name = flaris
version = 0.1.0
author = Balaji Veeramani and Nicholas Spevacek
author_email = bveeramani@berkeley.edu
description = A lightweight and easy-to-use game development framework.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eDGYuvRmgW/flaris
license = Apache License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
  freetype-py
  glfw
  PyGLM
  PyOpenGL-accelerate
  PyOpenGL
  numpy
  pillow

[options.package_data]
flaris = assets/fonts/*
